kubernetes/apps/k8s/kube-system/cilium/policies/deny-all.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all"
  namespace: media
spec:
  description: "Default-deny ingress policy"
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
