kubernetes/apps/k8s/kube-system/cilium/policies/ingress.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all"
  namespace: ingress
spec:
  description: "default deny-all policy"
  endpointSelector:
    matchLabels: {}
  ingress:
  - {}
  egress:
  - {}
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-within-namespace"
  namespace: ingress
specs:
  - endpointSelector:
      matchLabels: {}
    egress:
    - toEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: ingress
    ingress:
    - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: ingress
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-to-kube-system-coredns"
  namespace: ingress
specs:
  - endpointSelector:
      matchLabels: {}
    egress:
    - toEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: kube-system
          k8s-app: kube-dns
      toPorts:
      - ports:
        - port: "53"
          protocol: UDP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-nginx-egress-to-any"
  namespace: ingress
specs:
  - endpointSelector:
      matchLabels:
        name: ingress-nginx
        component: controller
    egress:
    - {}
